src/index.css
html {
	overflow-x: hidden;
}
body {
	margin: 0;
	font-family: "montserrat", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.loader {
	width: 100%;
	position: absolute;
	bottom: 0%;
	display: flex;
	justify-content: center;
	flex-direction: column;
	height: 90vh;
}

.LoaderIcon {
	max-width: 100%;
}

#home {
	height: calc(100vh - 50px);
}

.LoaderText {
	font-size: 20px;
	text-align: center;
}

code {
	font-family: source-code-pro, menlo, monaco, consolas, "courier new",
		monospace;
}
.LoginPage {
	background-color: #e79870;
	display: flex;
}
@media only screen and (max-width: 768px) {
	.LoginPage {
		flex-direction: column;
	}
}

